--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "jest": "^29.4.3"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
