--- a/2-react-testilng-lib/package.json
+++ b/2-react-testilng-lib/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,7 +40,14 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0"
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0"
   }
 }
