--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GapurEvloev/testing.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GapurEvloev/testing/issues"
+  },
+  "homepage": "https://github.com/GapurEvloev/testing#readme",
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.3"
+    "jest": "^29.5.0"
   }
 }
